--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
             </div>
           </div>
         </main>
+
+        <footer>
+          <p>
+            Desenvolvido por
+            <a
+              href="https://portfolio-larissa-carvalhos-projects.vercel.app/"
+              target="_blank"
+              >Larissa Carvalho</a
+            >
+          </p>
+        </footer>
       </div>
     </div>
 
